improved json parser spec compliance